fix(Map): position the map behind the category selector
fixes #235

--- a/app/components/ui/categorySelector/categorySelectorComponent.less
+++ b/app/components/ui/categorySelector/categorySelectorComponent.less
@@ -5,6 +5,8 @@
     justify-content: space-around;
     align-items: center;
     height: @categorySelectorHeight;
+    position: relative;
+    z-index: 1;
 
     .vg-category-selector-type {
         height: 28px;
