--- a/app/veganaut/map/map.less
+++ b/app/veganaut/map/map.less
@@ -155,7 +155,7 @@
 
 .main-map {
     position: fixed;
-    top: @navbarHeight + @categorySelectorHeight;
+    top: @navbarHeight;
     left: 0;
     right: 0;
     bottom: @mapFooterHeight;
